--- a/login2.html
+++ b/login2.html
@@ -17,7 +17,7 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-  background-color: #4CAF50;
+  background-color: #a3493b;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -85,7 +85,7 @@ span.psw {
 .close {
   position: absolute;
   right: 25px;
-  top: 0;
+  top: 2;
   color: #000;
   font-size: 35px;
   font-weight: bold;
@@ -120,7 +120,7 @@ span.psw {
      float: none;
   }
   .cancelbtn {
-     width: 100%;
+     width: 150%;
   }
 }
 </style>
@@ -140,7 +140,7 @@ span.psw {
     </div>
 
     <div class="container">
-      <label for="uname"><b>Username</b></label>
+      <label for="username"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required>
 
       <label for="psw"><b>Password</b></label>
@@ -152,7 +152,7 @@ span.psw {
       </label>
     </div>
 
-    <div class="container" style="background-color:#f1f1f1">
+    <div class="container" style="background-color:#a3493b">
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
       <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
