--- a/login2.html
+++ b/login2.html
@@ -17,7 +17,7 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-  background-color: #a3493b;
+  background-color: #a3493c;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -37,7 +37,7 @@ button:hover {
   background-color: #f44336;
 }
 
-/* Center the image and position the close button */
+/* Center the image */
 .imgcontainer {
   text-align: center;
   margin: 24px 0 12px 0;
