--- a/login2.html
+++ b/login2.html
@@ -18,7 +18,7 @@ input[type=text], input[type=password] {
 /* Set a style for all buttons */
 button {
   background-color: #a3493c;
-  color: white;
+  color: black;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
