--- a/login2.html
+++ b/login2.html
@@ -41,12 +41,12 @@ button:hover {
 /* Center the image */
 .imgcontainer {
   text-align: center;
-  margin: 24px 0 12px 0;
+  margin: 25px 0 12px 0;
   position: relative;
 }
 
 img.avatar {
-  width: 40%;
+  width: 50%;
   border-radius: 50%;
 }
 
@@ -66,7 +66,7 @@ span.psw {
   z-index: 1; /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
+  width: 200%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
@@ -121,14 +121,14 @@ span.psw {
      float: none;
   }
   .cancelbtn {
-     width: 150%;
+     width: 200%;
   }
 }
 </style>
 </head>
 <body>
 
-<h2>Modal Login Form</h2>
+<h2>Modern Login Form</h2>
 
 <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
